# med_coach

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  spec.md
.github/workflows/: sync-to-hub.yml
agents/: README.md  case_generator.py  evaluator.py  patient.py  teacher.py
app/: README.md  main.py
graph/: README.md  state.py  workflow.py
memory/: README.md  student_memory.py
schemas/: README.md  case.py
ui/: README.md  gradio_ui.py  streamlit_app.py
